rmovd overflow hiddn to fix page static + no foter

--- a/_src/assets/scss/components/_footer.scss
+++ b/_src/assets/scss/components/_footer.scss
@@ -1,30 +1,30 @@
 /* footer */
 
 .wrapper {
-    height: 600px;
+    // height: 100vh;
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
 
-        @media (min-width: 481px) and (max-width: 768px){
-            height: 1250px;
-        }
-        @media (min-width: 769px) and (max-width: 1024px){
-            height: 1500px;
-        }
-        @media (min-width: 1025px) {
-            height: 2200px;
-        }
+        // @media (min-width: 481px) and (max-width: 768px){
+        //     height: 100vh;
+        // }
+        // @media (min-width: 769px) and (max-width: 1024px){
+        //     height: 1500px;
+        // }
+        // @media (min-width: 1025px) {
+        //     height: 2200px;
+        // }
 }
 
 .page-body {
-    // flex-grow: 1;
+    flex-grow: 1;
     // background-color: #ffffff;
 }
 
 .footer {
     // flex-shrink: 0;
-    height: 60px;
+    height: auto;
     border-top: 1px solid grey;
     flex-shrink: 0;
     margin: 0px 0px 0px 0px;
